--- a/index.html
+++ b/index.html
@@ -227,6 +227,37 @@
 
   </main>
 
+  <!--inicio modal-->
+  
+  <!-- seccion modal fuera de estock -->
+  <section class="modal">
+   
+    <div class="modal__container">
+      <h2 class="modal__title">¡Error!</h2>
+      <p class="modal__paragraph">Lo sentimos ya no tenemos stock de este producto</p>
+      <a href="#" class="modal__close">Cerrar</a>
+    </div>
+  </section>
+
+   <!-- seccion modal Gracias por tu compra -->
+   <section class="modal__compra">
+    <div class="modal__container-compra">
+      <h2 class="modal__title-compra">¡Felicidades!</h2>
+      <p class="modal__paragraph-compra">Gracias por tu compra.</p>
+      <a href="#" class="modal__close-compra">Cerrar</a>
+    </div>
+  </section>
+
+   <!-- seccion modal Producto Agotado -->
+   <section class="modal__agotado">
+    <div class="modal__container-agotado">
+      <h2 class="modal__title-agotado">¡Error!</h2>
+      <p class="modal__paragraph-agotado">Lo sentimos el producto esta agotado</p>
+      <a href="#" class="modal__close-agotado">Cerrar</a>
+    </div>
+  </section>
+<!-- fin de los modales -->
+  <!--Fin de Ventana Modal-->
   <!--==================== FOOTER ====================-->
   <footer class="footer section">
     <div class="footer__container container grid">
