modificado idioma ingles

--- a/index.html
+++ b/index.html
@@ -254,11 +254,11 @@ L82,35.7z">
   </section>
 
   <!-- seccion modal Producto Agotado -->
-  <section class="modal__agotado">
-    <div class="modal__container-agotado">
-      <h2 class="modal__title-agotado">¡Error!</h2>
-      <p class="modal__paragraph-agotado">Lo sentimos el producto esta agotado</p>
-      <a href="#" class="modal__close-agotado">Cerrar</a>
+  <section class="modal__exhausted">
+    <div class="modal__container-exhausted">
+      <h2 class="modal__title-exhausted">¡Error!</h2>
+      <p class="modal__paragraph-exhausted">Lo sentimos el producto esta agotado</p>
+      <a href="#" class="modal__close-exhausted">Cerrar</a>
     </div>
   </section>
   <!-- fin de los modales -->
