corrigiendo idioma en codigo

--- a/index.html
+++ b/index.html
@@ -245,11 +245,11 @@ L82,35.7z">
   </section>
 
   <!-- seccion modal Gracias por tu compra -->
-  <section class="modal__compra">
-    <div class="modal__container-compra">
-      <h2 class="modal__title-compra">¡Felicidades!</h2>
-      <p class="modal__paragraph-compra">Gracias por tu compra.</p>
-      <a href="#" class="modal__close-compra">Cerrar</a>
+  <section class="modal__buys">
+    <div class="modal__container-buys">
+      <h2 class="modal__title-buys">¡Felicidades!</h2>
+      <p class="modal__paragraph-buys">Gracias por tu compra.</p>
+      <a href="#" class="modal__close-buys">Cerrar</a>
     </div>
   </section>
 
@@ -261,6 +261,8 @@ L82,35.7z">
       <a href="#" class="modal__close-exhausted">Cerrar</a>
     </div>
   </section>
+
+
   <!-- fin de los modales -->
   <!--Fin de Ventana Modal-->
   <!--==================== FOOTER ====================-->
