eliminar fondo imagenes

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ L82,35.7z">
     <section class="home" id="home">
       <div class="home__container container grid">
         <div class="home__img-bg">
-          <img src="assets/img/GPU/gigabyte-geforce-rtx-3080-gaming-oc-12-gb-oem.jpg" alt="" class="home__img">
+          <img src="assets/img/GPU/gigabyte-geforce-rtx-3080-gaming-oc-12-gb-oem.png" alt="" class="home__img">
         </div>
 
         <div class="home__data">
