--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@ L82,35.7z">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48.92 56.48" class="nav__logo-icon">
           <title>Academlo Logo</title>
           <g>
-            <g> 
+            <g>
               <!-- <path d="M24.45,56.48,0,42.36V14.12L24.46,0,48.92,14.12V42.36ZM1.89,41.26l22.56,13L47,41.26v-26l-22.56-13-22.56,13Z"></path> -->
               <path
                 d="M28.58,15.39H25.16L35.78,36H31.49L20.67,15.71,8.23,38.82H18.94l3-5.43h-3.4l-1.47,2.54h-4l2.69-5.09H25.85l4.28,8H40.67ZM17.23,28.21l3.57-6.6,3.57,6.6Z">
               </path>
             </g>
           </g>
-        </svg>  Shop
+        </svg> Shop
       </a>
 
 
@@ -263,7 +263,6 @@ L82,35.7z">
   </section>
 
 
-  <!-- fin de los modales -->
   <!--Fin de Ventana Modal-->
   <!--==================== FOOTER ====================-->
   <footer class="footer section">
@@ -342,6 +341,9 @@ L82,35.7z">
   <!--=============== MAIN JS ===============-->
   <script src="assets/js/main.js" type="module"></script>
   <script src="assets/js/cart.js"></script>
+
+ <!--=============== https://sweetalert.js.org/ ===============-->
+ <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 
 </html>
