--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ L82,35.7z">
     <section class="products" id="products">
       <div class="products__container container">
         <ul class="products__filters">
-          <li class="products__item products__line" data-filter="all">
+          <li class="products__item products__line" data-filter="all" id="all">
             <h3 class="products__title">
               Mostrar todo
             </h3>
@@ -173,7 +173,7 @@ L82,35.7z">
             </span>
           </li>
 
-          <li class="products__item products__line active-product" data-filter=".hoodies">
+          <li class="products__item products__line active-product" data-filter=".cpu" id="cpu">
             <h3 class="products__title">
               Procesadores
             </h3>
@@ -182,7 +182,7 @@ L82,35.7z">
             </span>
           </li>
 
-          <li class="products__item products__line" data-filter=".shirts">
+          <li class="products__item products__line" data-filter=".motherCard" id="motherCard">
             <h3 class="products__title">
               Tarjetas Madres
             </h3>
@@ -191,7 +191,7 @@ L82,35.7z">
             </span>
           </li>
 
-          <li class="products__item" data-filter=".sweatshirts">
+          <li class="products__item" data-filter=".graphics" id="graphics">
             <h3 class="products__title">
               Graficas
             </h3>
@@ -203,22 +203,7 @@ L82,35.7z">
 
         <div class="products__content grid" id="products__content">
 
-          <article class="products__card hoodies">
-            <div class="products__shape">
-              <img src="assets/img/featured1.png" alt="Hoodies" class="products__img">
-            </div>
-
-            <div class="products__data">
-              <h2 class="products__name">Hoodies</h2>
-              <div class="">
-                <h3 class="products__price">$456.00</h3>
-                <span class="products__quantity">Quedan solo 5 unidades</span>
-              </div>
-              <button type="button" class="button products__button addToCart" data-id="1">
-                <i class="bx bx-plus"></i>
-              </button>
-            </div>
-          </article>
+          <!-- se carga con Js -->
 
         </div>
       </div>
