Actualizacion de category en db

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ L82,35.7z">
             </span>
           </li>
 
-          <li class="products__item" data-filter=".graphics" id="graphics">
+          <li class="products__item" data-filter=".graphics" id="gpu">
             <h3 class="products__title">
               Graficas
             </h3>
