--- a/index.html
+++ b/index.html
@@ -41,8 +41,10 @@ L82,35.7z">
   <header class="header" id="header">
     <nav class="nav container">
       <a href="#" class="nav__logo">
+        <img  src="./assets/img/logo/experto.png" alt="experto"  class="nav__logo-icon">
+        
       </a>
-
+    
       <div class="nav__menu" id="nav-menu">
         <ul class="nav__list">
           <li class="nav__item">
