Buscar por categoria

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ L82,35.7z">
     <section class="products" id="products">
       <div class="products__container container">
         <ul class="products__filters">
-          <li class="products__item products__line" data-filter="all" id="all">
+          <li class="products__item products__line filter" data-filter="all">
             <h3 class="products__title">
               Mostrar todo
             </h3>
@@ -160,7 +160,7 @@ L82,35.7z">
             </span>
           </li>
 
-          <li class="products__item products__line active-product" data-filter=".cpu" id="cpu">
+          <li class="products__item products__line active-product filter" data-filter=".Procesador">
             <h3 class="products__title">
               Procesadores
             </h3>
@@ -169,7 +169,7 @@ L82,35.7z">
             </span>
           </li>
 
-          <li class="products__item products__line" data-filter=".motherCard" id="motherCard">
+          <li class="products__item products__line filter" data-filter=".tm">
             <h3 class="products__title">
               Tarjetas Madres
             </h3>
@@ -178,7 +178,7 @@ L82,35.7z">
             </span>
           </li>
 
-          <li class="products__item" data-filter=".graphics" id="gpu">
+          <li class="products__item filter" data-filter=".gpu">
             <h3 class="products__title">
               Graficas
             </h3>
