--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>experto PC Shop</title>
   <!--=============== FAVICON ===============-->
-  <link rel="shortcut icon" href="assets/img/juego-de-azar.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/img/logo/experto.png" type="image/x-icon">
   <!-- <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon"> -->
   <!--=============== BOXICONS ===============-->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
@@ -138,9 +138,6 @@ L82,35.7z">
           <span class="home__price">$1,500.00</span>
 
           <div class="home__btns">
-            <a href="#" class="button button--transparent button--small">
-              Descubrir
-            </a>
             <button class="button home__button addToCartGPU" data-id="3">AÑADIR AL CARRITO</button>
           </div>
         </div>
@@ -247,7 +244,7 @@ L82,35.7z">
         <h3 class="footer__title">Encuentranos</h3>
 
         <ul class="footer__list">
-          <li>Toluca - México</li>
+          <li>LATAN</li>
         </ul>
       </div>
       <div class="footer__content">
@@ -307,7 +304,7 @@ L82,35.7z">
         </ul>
       </div>
     </div>
-    <span class="footer__copy">&#169; ACADEMLO SHOP. Todos los derechos reservados</span>
+    <span class="footer__copy">&#169; Experto PC SHOP. Todos los derechos reservados 2023</span>
   </footer>
 
   <!--=============== SCROLL UP ===============-->
