corrigiendo responsive y algunas cosas de funcionalidad

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ L82,35.7z">
       <span class="cart__prices-total" id="cart-total"></span>
     </div>
 
-    <div id="action-buttons" class="cart__checkout">
+    <div id="action-buttons" class="cart__checkout grid">
       <button class="button cart__btn" id="cart-checkout" disabled><i class='bx bxs-check-shield'></i> Comprar</button>
       <button class="button cart__btn" id="cart-empty" disabled><i class='bx bx-cart-alt'></i> Limpiar</button>
     </div>
