--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@ L82,35.7z">
         <h3 class="footer__title">Encuentranos</h3>
 
         <ul class="footer__list">
-          <li>LATAN</li>
+          <li>LATAM</li>
         </ul>
       </div>
       <div class="footer__content">
