--- a/index.html
+++ b/index.html
@@ -183,6 +183,46 @@ L82,35.7z">
               4 productos
             </span>
           </li>
+          <li class="products__item filter" data-filter=".ram">
+            <h3 class="products__title">
+              Memorias Ram
+            </h3>
+            <span class="products__stock">
+              4 productos
+            </span>
+          </li>
+          <li class="products__item filter" data-filter=".power">
+            <h3 class="products__title">
+              Fuentes
+            </h3>
+            <span class="products__stock">
+              4 productos
+            </span>
+          </li>
+          <li class="products__item filter" data-filter=".cooler">
+            <h3 class="products__title">
+              Enfriamiento
+            </h3>
+            <span class="products__stock">
+              4 productos
+            </span>
+          </li>
+          <li class="products__item filter" data-filter=".case">
+            <h3 class="products__title">
+              Case
+            </h3>
+            <span class="products__stock">
+              4 productos
+            </span>
+          </li>
+          <li class="products__item filter" data-filter=".disc">
+            <h3 class="products__title">
+              Almecenamiento
+            </h3>
+            <span class="products__stock">
+              4 productos
+            </span>
+          </li>
         </ul>
 
         <div class="products__content grid" id="products__content">
