Contador del procesador

--- a/index.html
+++ b/index.html
@@ -156,12 +156,11 @@ L82,35.7z">
               Mostrar todos los productos
             </span>
           </li>
-
           <li class="products__item products__line active-product filter" data-filter=".Procesador">
             <h3 class="products__title">
               Procesadores
             </h3>
-            <span class="products__stock">
+            <span id = "cpu" class="products__stock">
               3 productos
             </span>
           </li>
