--- a/assets/html/about.html
+++ b/assets/html/about.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,11 +12,9 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
   <!--=============== CSS ===============-->
   <link rel="stylesheet" href="../css/about.css">
-
 </head>
 
 <body>
-
   <!--==================== HEADER ====================-->
   <header class="header" id="header">
     <nav class="nav container">
@@ -102,8 +99,7 @@
         </div>
         <div class="face back">
           <h3 class="titles">Mision</h3>
-          <p>“Ser una empresa que haga de las necesidades sociales y empresariales soluciones tecnológicas que
-            contribuyan con la evolución de la humanidad</p>
+          <p>“Ser una empresa que haga de las necesidades sociales y empresariales soluciones tecnológicas que contribuyan con la evolución de la humanidad</p>
           <div class="link">
           </div>
         </div>
@@ -115,10 +111,8 @@
         </div>
         <div class="face back">
           <h3 class="titles">Vision</h3>
-          <p>Ser una empresa de reconocido prestigio nacional e internacional con autonomía administrativa, con
-            excelencia en ventas de hadware.</p>
+          <p>Ser una empresa de reconocido prestigio nacional e internacional con autonomía administrativa, con excelencia en ventas de hadware.</p>
           <div class="link">
-
           </div>
         </div>
       </div>
@@ -139,9 +133,7 @@
       <path fill="#F26250"
         d="M24,4C13,4,4,13,4,24s9,20,20,20s20-9,20-20S35,4,24,4z M24,40c-8.8,0-16-7.2-16-16S15.2,8,24,8 s16,7.2,16,16S32.8,40,24,40z" />
     </svg>
-    <h2 class="title3">Derechos de Autor
-
-    </h2>
+    <h2 class="title3">Derechos de Autor</h2>
     <div class="autor">
       <p>-<a href="https://luisgomeztorres.netlify.app/" target="_blank">Luis Adán Gómez Torres</a>
       </p>
@@ -165,5 +157,4 @@
   <script src="assets/js/main.js" type="module"></script>
   <script src="assets/js/cart.js"></script>
 </body>
-
 </html>
