--- a/assets/html/about.html
+++ b/assets/html/about.html
@@ -7,12 +7,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>experto PC Shop</title>
   <!--=============== FAVICON ===============-->
-  <link rel="shortcut icon" href="../img/logo/experto.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/img/juego-de-azar.png" type="image/x-icon">
+  <!-- <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon"> -->
   <!--=============== BOXICONS ===============-->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
   <!--=============== CSS ===============-->
   <link rel="stylesheet" href="../css/about.css">
-
+​
 </head>
 ​
 <body>
@@ -44,7 +45,7 @@
     </nav>
   </header>
 ​
-  <section class="cs container">
+  <section class="cs">
     <img src="../img/iconos/icons8-work-48.png" alt="" width="50" height="60" class="img">
     <h2 id="css" class="title1">Centros de Soporte</h2>
     <div class="box-cb">
@@ -60,9 +61,9 @@
           <img src="../img/iconos/icons8-costa-rica-48.png" alt="" width="50" height="60">
         </div>
         <div class="country">
-          <h3>Argentina</h3>
+          <h3>Colombia</h3>
           <p>Calle Rosa Blanca Numero 789 Buenos Aires,Arg Tel. 789 45 27 98</p>
-          <img src="../img/iconos/icons8-argentina-48.png" alt="" width="50" height="60">
+          <img src="../img/iconos/descarga.png" alt="" width="50" height="60">
         </div>
         <div class="country country2">
           <h3>Peru</h3>
@@ -72,7 +73,7 @@
       </div>
     </div>
   </section>
-  <section class="we container">
+  <section class="we">
     <img src="../img/iconos/icons8-account-skin-type-1-48.png" alt="" width="50" height="60" class="img2">
     <h2 class="title2">Nosotros</h2>
     <section id="project" class="tarjetas container"> <!-- AQUI TENGO MI SECCION DE MI CARRUSEL-->
@@ -151,12 +152,14 @@
       </p>
       <p>-<a href="https://miguelmanzanera.netlify.app/" target="_blank">Miguel Manzanera</a>
       </p>
-      <p>-<a href="#" target="_blank">Frank Florian</a>
+      <p>-<a href="https://frank-florian.netlify.app" target="_blank">Frank Florian</a>
       </p>
     </div>
   </section>
+​
   <!--=============== MAIN JS ===============-->
   <script src="../js/main.js" type="module"></script>
+
 </body>
 ​
 </html>
