--- a/assets/html/about.html
+++ b/assets/html/about.html
@@ -41,13 +41,16 @@
       <div class="nav__btns">
         <!-- Theme change button -->
         <i class='bx bx-moon change-theme' id="theme-button"></i>
+        <div class="nav__toggle" id="nav-toggle">
+          <i class='bx bx-grid-alt'></i>
+        </div>
       </div>
     </nav>
   </header>
 ​
-  <section class="cs">
+  <section id="css" class="cs">
     <img src="../img/iconos/icons8-work-48.png" alt="" width="50" height="60" class="img">
-    <h2 id="css" class="title1">Centros de Soporte</h2>
+    <h2  class="title1">Centros de Soporte</h2>
     <div class="box-cb">
       <div class="support_center">
         <div class="country">
@@ -73,12 +76,10 @@
       </div>
     </div>
   </section>
-  <section class="we">
+  <section id="project" class="we">
     <img src="../img/iconos/icons8-account-skin-type-1-48.png" alt="" width="50" height="60" class="img2">
     <h2 class="title2">Nosotros</h2>
-    <section id="project" class="tarjetas container"> <!-- AQUI TENGO MI SECCION DE MI CARRUSEL-->
-      
-      
+    <section  class="tarjetas container"> <!-- AQUI TENGO MI SECCION DE MI CARRUSEL-->
       <div class="card">
         <div class="face front">
           <img src="../img/iconos/we.png" alt="">
